First release of docker scala client

--- a/src/main/resources/docker-scala.conf
+++ b/src/main/resources/docker-scala.conf
@@ -1,3 +1,6 @@
-docker {
-    host = "unix:///var/run/docker.sock"
+unrlab {
+    docker {
+        host = "http://127.0.0.1:55555"
+        version = "1.25"
+    }
 }
