--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,13 @@ scala:
    - 2.11.8
    - 2.12.0
    - 2.12.1
+
+sudo: required
+
+services:
+  - docker
+
+before_install:
+    - docker info
+    - sudo service docker stop
+    - docker info
