WIP travis build config

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ services:
   - docker
 
 before_install:
-    - docker info
     - sudo service docker stop
-    - sudo echo 'DOCKER_OPTS="-H 127.0.0.1:55555"' | sudo tee /etc/default/docker
+    - sudo echo 'DOCKER_OPTS="-H 127.0.0.1:55555"' >> /etc/default/docker
     - sudo service docker start
     - sudo cat /etc/default/docker
