--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,9 @@ services:
 
 before_install:
     - sudo service docker stop
+    - sudo cat /etc/default/docker
     - sudo echo 'DOCKER_OPTS="-H 127.0.0.1:55555"' | sudo tee /etc/default/docker
     - sudo service docker start
+    - sudo service docker status
     - sudo cat /etc/default/docker
-    - sudo docker pull mysql:5.5
+    - sudo docker pull mysql:5.6
