--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,4 @@ before_install:
     - sudo service docker status
     - sudo cat /etc/default/docker
     - sudo docker pull mysql:5.6
+    - sudo docker hello-world
